--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,12 @@
     }
 }
 
+@mixin mobile {
+    @media (max-width: 800px){
+        @content;
+    }
+}
+
 body {
     background-color: $primary-color;
     color: $text-color;
@@ -35,6 +41,10 @@ body {
         &:hover {
             color: pink;
         }
+    }
+
+    @include mobile {
+        flex-direction: column;
     }
 }
 
